# yt2mp4-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json
builds/v1.0.0/macos/Yt2Mp4.app/Contents/: Info.plist
src/: App.tsx  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  deps.rs  formats.rs  history.rs  lib.rs  progress.rs  settings.rs  utils.rs  ytdlp.rs
src/components/: ClipSelector.tsx  DownloadButton.tsx  DownloadHistory.tsx  QualitySelector.tsx  Settings.tsx  SetupScreen.tsx  SkeletonCard.tsx  SlidePanel.tsx  Toggle.tsx  TopToolbar.tsx  UrlInput.tsx  VideoPreview.tsx
src/hooks/: useClipboard.ts  useTheme.ts
src/lib/: commands.ts  time-utils.ts  types.ts
src/stores/: useAppStore.ts  useSettingsStore.ts
